<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/minutelyHolder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    tools:background="@color/colorUVIndexBackgroundDefault">

    <FrameLayout
        android:id="@+id/minutelyCollapseTarget"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/minutelyChartHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/minutelyChartHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minutelyBarrier"
        app:layout_constraintTop_toBottomOf="@+id/minutelyTitle">

        <com.andb.apps.weather.ui.minutely.LineChartRounded
            android:id="@+id/minutelyChart"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:focusable="true" />
    </FrameLayout>

    <ImageView
        android:id="@+id/minutelyCollpaseIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/minutelyTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/minutelyTitle"
        app:srcCompat="@drawable/ic_collapse_expand_black_24dp" />

    <ImageView
        android:id="@+id/minutelyTitleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/minutelyTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/minutelyTitle"
        app:srcCompat="@drawable/ic_raindrop_black_24dp" />

    <TextView
        android:id="@+id/minutelyTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/minutelyCollpaseIcon"
        app:layout_constraintStart_toEndOf="@+id/minutelyTitleIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Next Hour: Partly Cloudy really long description for the next hour" />

    <TextView
        android:id="@+id/minutelyHeavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/precip_heavy"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/minutelyMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutelyCollapseTarget"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/minutelyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/precip_med"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/minutelyLight"
        app:layout_constraintStart_toStartOf="@+id/minutelyHeavy"
        app:layout_constraintTop_toBottomOf="@+id/minutelyHeavy" />

    <TextView
        android:id="@+id/minutelyLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/precip_light"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/minutelyChartHolder"
        app:layout_constraintStart_toStartOf="@+id/minutelyHeavy"
        app:layout_constraintTop_toBottomOf="@+id/minutelyMedium" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/minutelyBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="minutelyHeavy,minutelyLight,minutelyMedium"
        tools:layout_editor_absoluteX="411dp" />


</androidx.constraintlayout.widget.ConstraintLayout>